force-app/main/default/objects/Quote/fields/Demographic__c.field-meta.xml
<CustomField>
    <fullName>Demographic__c</fullName>
    <label>Demographic</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>