force-app/main/default/objects/Quote/fields/dollars_of_Internal_Budget_to_Talent__c.field-meta.xml
<CustomField>
    <fullName>dollars_of_Internal_Budget_to_Talent__c</fullName>
    <formula>of_Internal_Budget_to_Talent__c * Internal_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ of Internal Budget to Talent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>