force-app/main/default/objects/Quote/fields/Flight_Date_Description__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date_Description__c</fullName>
    <label>Flight Date Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>