force-app/main/default/objects/Quote/fields/Follower_Count_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Follower_Count_Minimum__c</fullName>
    <label>Follower Count Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>