force-app/main/default/objects/Quote/fields/Internal_Budget__c.field-meta.xml
<CustomField>
    <fullName>Internal_Budget__c</fullName>
    <label>Internal Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>