force-app/main/default/objects/Quote/fields/Media_Notes__c.field-meta.xml
<CustomField>
    <fullName>Media_Notes__c</fullName>
    <label>Media Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>