force-app/main/default/objects/Quote/fields/of_Internal_Budget_to_Media__c.field-meta.xml
<CustomField>
    <fullName>of_Internal_Budget_to_Media__c</fullName>
    <label>% of Internal Budget to Media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>