force-app/main/default/objects/Quote/fields/Primary_KPI__c.field-meta.xml
<CustomField>
    <fullName>Primary_KPI__c</fullName>
    <label>Primary KPI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Impressions</fullName>
            </value>
            <value>
                <fullName>Video Views</fullName>
            </value>
            <value>
                <fullName>Engagements</fullName>
            </value>
            <value>
                <fullName>Clicks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>