force-app/main/default/objects/Quote/fields/Project_Management_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Notes__c</fullName>
    <label>Project Management Notes</label>
    <type>TextArea</type>
</CustomField>