force-app/main/default/objects/Quote/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Topline Estimates</fullName>
            </value>
            <value>
                <fullName>Media Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>