force-app/main/default/objects/Quote/fields/Rights__c.field-meta.xml
<CustomField>
    <fullName>Rights__c</fullName>
    <label>Rights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>All Rights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>