force-app/main/default/objects/Quote/fields/Talent__c.field-meta.xml
<CustomField>
    <fullName>Talent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Talent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>