force-app/main/default/objects/Quote/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <label>Targeting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>